# inviting-rust

./: Cargo.toml  README.md  async.md
async-echo-server/: Cargo.toml  README.md
async-echo-server/src/: epoll.rs  executor.rs  main.rs  reactor.rs  tcp_listener.rs  util.rs
axumlike/: Cargo.toml
axumlike-t/axumlike01/: Cargo.toml
axumlike-t/axumlike01/examples/hello_world/: Cargo.toml
axumlike-t/axumlike01/examples/hello_world/src/: main.rs
axumlike-t/axumlike01/src/: buffer.rs  error.rs  handler.rs  lib.rs  macros.rs  response.rs  router.rs
axumlike-t/axumlike01/src/router/: future.rs  method_filter.rs
axumlike-t/axumlike02/: Cargo.toml  README.md
axumlike-t/axumlike02/examples/hello_world/: Cargo.toml
axumlike-t/axumlike02/examples/hello_world/src/: main.rs
axumlike-t/axumlike02/src/: body.rs  extract.rs  handler.rs  lib.rs  macros.rs  router.rs  service.rs
axumlike-t/axumlike02/src/extract/: rejection.rs  request_parts.rs
axumlike-t/axumlike02/src/extract/builtin/: mod.rs  query.rs  typed_header.rs
axumlike-t/axumlike02/src/handler/: future.rs  into_service.rs
axumlike-t/axumlike02/src/router/: empty_router.rs  route.rs
axumlike-t/axumlike02/src/service/: future.rs
axumlike/examples/: hello_world.rs
axumlike/src/: body.rs  error.rs  handler.rs  lib.rs  macros.rs  router.rs  util.rs
axumlike/src/router/: empty_router.rs  future.rs  method_filter.rs  route.rs
epoll-example/: Cargo.toml
epoll-example/src/: epoll_syscall.rs  main.rs  req_context.rs
futures-demo/: Cargo.toml
futures-demo/src/: main.rs
read-sum/: Cargo.toml
read-sum/src/: main.rs  origin.rs  refact1.rs  refact2.rs  refact3.rs  refact4.rs  refact5.rs
src/: lib.rs
src/ch01/: ctfe.rs  expr.rs  lexical.rs  mod.rs
src/ch02/: lifetime.rs  mod.rs  ownership.rs  s1_ownership.rs  s2_lifetime.rs  s3_thread_safe.rs  s3_trait_and_generic.rs  s4_lockfree.rs  s4_paradigms.rs  s4_trait_and_generic.rs  s5_error_handle.rs  s5_paradigms.rs  s5_trait_and_generic.rs  s6_error_handle.rs  s6_metaprogramming.rs  s6_paradigms.rs  s7_error_handle.md  s7_error_handle.rs  s7_metaprogramming.rs  s7_panic_cant_handle.md  s7_unsafe_rust.rs  s8_metaprogramming.rs  s9_unsafe_rust.rs
src/ch03/: mod.rs  s1_io_model.rs  s2_async_await.rs  s3_async_runtime.rs
src/ch04/: mod.rs  s1_frameworkers.rs
toml-demo/: Cargo.toml
toml-demo-refactor/: Cargo.toml  README.md
toml-demo-refactor/config/: Poem.toml
toml-demo-refactor/src/: conf.rs  environment.rs  lib.rs
toml-demo-refactor/src/conf/: basic_config.rs  error.rs  poem_config.rs
toml-demo/conf/: Poem.toml
toml-demo/src/: conf.rs  environment.rs  error.rs  main.rs
