[package]
name = "async-echo-server"
version = "0.1.0"
authors = ["blackanger <blackanger.z@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
futures = "0.3.12"
lazy_static = "1.4.0"
libc = "0.2.86"
log = "0.4.14"
