[package]
name = "toml-demo"
version = "0.1.0"
authors = ["blackanger <blackanger.z@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]
toml = "0.5"
serde = {version="1.0", features=["derive"]}
num_cpus = "1.13.0"
