[package]
name = "hello_world"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axumlike02 = { path = "../..", features = ["headers"] }
bytes = "1.1.0"
color-eyre = "0.5.11"
headers = "0.3.4"
http = "0.2.4"
hyper = "0.14.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = {version = "0.1.1", features = ["full"]}
tracing = "0.1.26"
tracing-subscriber = "0.2.20"

